--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@ MAIL_SERVER=smtp.ethereal.email
 MAIL_PORT=587
 MAIL_FROM=nestor98@ethereal.email
 MAIL_FROM_NAME=Aniket Thakker_@_Devops
-DOMAIN=localhost:8000
+DOMAIN=
