Error Must Fail Commit check Test Commit PR Check and testing T1

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,5 @@ MAIL_PASSWORD=cdp31pzqp4DTYBNT3B
 MAIL_SERVER=smtp.ethereal.email
 MAIL_PORT=587
 MAIL_FROM=nestor98@ethereal.email
-MAIL_FROM_NAME=Aniket Thakker_@_Devops
+MAIL_FROM_NAME=Aniket_Thakker_@_Devops
 DOMAIN=
