--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,7 @@ version: "3.0"
 services:
   web:
     build: .
+    container_name: fastapi_container
     volumes:
       - .:/app
     environment: 
