--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build and push Docker image
         if: ${{ success() }}   # Only run if tests passed
         run: |
-          IMAGE=ghcr.io/${{ github.repository_owner }}/aniket-fastapi
+          IMAGE=ghcr.io/aniket-itsusf/aniket-fastapi
           docker build -t $IMAGE:latest -t $IMAGE:${{ github.sha }} .
           docker push $IMAGE:latest
           docker push $IMAGE:${{ github.sha }}
