--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "50 2 * * *" # "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -41,7 +41,7 @@ jobs:
       - name: Build and push Docker image
         if: ${{ success() }}   # Only run if tests passed
         run: |
-          IMAGE=ghcr.io/aniket-itsusf/aniket-fastapi
+          IMAGE=ghcr.io/${{ github.repository_owner }}/aniket-fastapi
           docker build -t $IMAGE:latest -t $IMAGE:${{ github.sha }} .
           docker push $IMAGE:latest
           docker push $IMAGE:${{ github.sha }}
