--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,8 @@ on:
     branches:
       - main
   schedule:
-    - cron: "50 2 * * *" # "0 0 * * *"
-  workflow_dispatch:
-
+    - cron: "0 8 * * *"
+    - cron: "15 3 * * *"
 jobs:
   test-build-publish:
     runs-on: ubuntu-latest
