--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
-        if: ${{ success() }}   # Only run if tests passed
+        if: ${{ success() }}
         run: |
           IMAGE=ghcr.io/${{ github.repository_owner }}/aniket-fastapi
           docker build -t $IMAGE:latest -t $IMAGE:${{ github.sha }} .
@@ -62,6 +62,3 @@ jobs:
           to: ${{ secrets.EMAIL_RECIPIENTS }}
           from: GitHub Workflow
           body: FATAL - MAIN_BUILD-FAILURE The recent nightly build for main has failed.
-
-  env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
